# opencv-file

./: README.md
HSV/: main.cpp
show_color/: CMakeLists.txt  main.cpp  show_img.cpp
show_color/include/: img_tools.hpp
videocapture/: CMakeLists.txt  main.cpp  vedio.cpp
形态学/: main.cpp
边缘提取/: CMakeLists.txt  main.cpp
透视变换/: main.cpp
透视变换2/: CMakeLists.txt  change.cpp  main.cpp
